# minty

./: CLAUDE.md  LICENSE
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: __init__.py  account.py  budget.py  category.py  transaction.py  user.py
backend/app/routers/: __init__.py  accounts.py  budget.py  categories.py  transactions.py
backend/app/schemas/: __init__.py  account.py  budget.py  category.py  transaction.py  user.py
